--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "browserslist": "^4.3.4",
     "card-deck": "^1.0.0",
     "cross-fetch": "^2.2.2",
+    "handlebars": "^4.1.2",
+    "js-yaml": "^3.13.1",
     "prop-types": "^15.6.1",
     "rc-slider": "8.6.1",
     "react": "^16.4.2",
