--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "rc-slider": "8.6.1",
     "react": "^16.4.2",
     "react-dom": "^16.3.1",
+    "react-event-injector": "^1.1.2",
     "react-pure-lifecycle": "^3.0.0",
     "react-redux": "^5.0.7",
     "react-redux-scroll": "^0.1.2",
