--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "cross-fetch": "^2.2.2",
     "handlebars": "^4.1.2",
     "js-yaml": "^3.13.1",
+    "lodash": "^4.17.14",
     "prop-types": "^15.6.1",
     "rc-slider": "8.6.1",
     "react": "^16.4.2",
